--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # VITE_BACKEND_URI=https://threewinternshipq2.onrender.com
-# VITE_BACKEND_URI=http://localhost:5050
-VITE_BACKEND_URI=https://3-wq-2-backend.vercel.app
+VITE_BACKEND_URI=http://localhost:5050
+# VITE_BACKEND_URI=https://3-wq-2-backend.vercel.app
